syntax = "proto3";

package proto;

service ElasticIpService {
    rpc renewElasticIp(RenewingElasticIp) returns (RenewedElasticResult) {}
}

message RenewedElasticResult {
    string elasticIp = 1;
}

message RenewingElasticIp {
    string instanceId = 1;
    string node = 2;
    string pod = 3;
    string pod_ip = 4;
}
